// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SocialIcons /> <SocialIcons /> handle _openTab 1`] = `
<SocialIcons
  classes={
    Object {
      "button": Object {},
      "container": Object {},
    }
  }
  color="white"
>
  <WithStyles(Grid)
    align="center"
    className={Object {}}
    container={true}
    item={true}
    justify="center"
    spacing={0}
  >
    <Grid
      align="center"
      alignContent="stretch"
      alignItems="stretch"
      className={Object {}}
      classes={
        Object {
          "align-content-xs-center": "MuiGrid-align-content-xs-center-15",
          "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end-17",
          "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start-16",
          "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around-19",
          "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between-18",
          "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline-14",
          "align-items-xs-center": "MuiGrid-align-items-xs-center-11",
          "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end-13",
          "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start-12",
          "container": "MuiGrid-container-3",
          "direction-xs-column": "MuiGrid-direction-xs-column-6",
          "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse-7",
          "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse-8",
          "grid-lg-1": "MuiGrid-grid-lg-1-74",
          "grid-lg-10": "MuiGrid-grid-lg-10-83",
          "grid-lg-11": "MuiGrid-grid-lg-11-84",
          "grid-lg-12": "MuiGrid-grid-lg-12-85",
          "grid-lg-2": "MuiGrid-grid-lg-2-75",
          "grid-lg-3": "MuiGrid-grid-lg-3-76",
          "grid-lg-4": "MuiGrid-grid-lg-4-77",
          "grid-lg-5": "MuiGrid-grid-lg-5-78",
          "grid-lg-6": "MuiGrid-grid-lg-6-79",
          "grid-lg-7": "MuiGrid-grid-lg-7-80",
          "grid-lg-8": "MuiGrid-grid-lg-8-81",
          "grid-lg-9": "MuiGrid-grid-lg-9-82",
          "grid-lg-auto": "MuiGrid-grid-lg-auto-72",
          "grid-lg-true": "MuiGrid-grid-lg-true-73",
          "grid-md-1": "MuiGrid-grid-md-1-60",
          "grid-md-10": "MuiGrid-grid-md-10-69",
          "grid-md-11": "MuiGrid-grid-md-11-70",
          "grid-md-12": "MuiGrid-grid-md-12-71",
          "grid-md-2": "MuiGrid-grid-md-2-61",
          "grid-md-3": "MuiGrid-grid-md-3-62",
          "grid-md-4": "MuiGrid-grid-md-4-63",
          "grid-md-5": "MuiGrid-grid-md-5-64",
          "grid-md-6": "MuiGrid-grid-md-6-65",
          "grid-md-7": "MuiGrid-grid-md-7-66",
          "grid-md-8": "MuiGrid-grid-md-8-67",
          "grid-md-9": "MuiGrid-grid-md-9-68",
          "grid-md-auto": "MuiGrid-grid-md-auto-58",
          "grid-md-true": "MuiGrid-grid-md-true-59",
          "grid-sm-1": "MuiGrid-grid-sm-1-46",
          "grid-sm-10": "MuiGrid-grid-sm-10-55",
          "grid-sm-11": "MuiGrid-grid-sm-11-56",
          "grid-sm-12": "MuiGrid-grid-sm-12-57",
          "grid-sm-2": "MuiGrid-grid-sm-2-47",
          "grid-sm-3": "MuiGrid-grid-sm-3-48",
          "grid-sm-4": "MuiGrid-grid-sm-4-49",
          "grid-sm-5": "MuiGrid-grid-sm-5-50",
          "grid-sm-6": "MuiGrid-grid-sm-6-51",
          "grid-sm-7": "MuiGrid-grid-sm-7-52",
          "grid-sm-8": "MuiGrid-grid-sm-8-53",
          "grid-sm-9": "MuiGrid-grid-sm-9-54",
          "grid-sm-auto": "MuiGrid-grid-sm-auto-44",
          "grid-sm-true": "MuiGrid-grid-sm-true-45",
          "grid-xl-1": "MuiGrid-grid-xl-1-88",
          "grid-xl-10": "MuiGrid-grid-xl-10-97",
          "grid-xl-11": "MuiGrid-grid-xl-11-98",
          "grid-xl-12": "MuiGrid-grid-xl-12-99",
          "grid-xl-2": "MuiGrid-grid-xl-2-89",
          "grid-xl-3": "MuiGrid-grid-xl-3-90",
          "grid-xl-4": "MuiGrid-grid-xl-4-91",
          "grid-xl-5": "MuiGrid-grid-xl-5-92",
          "grid-xl-6": "MuiGrid-grid-xl-6-93",
          "grid-xl-7": "MuiGrid-grid-xl-7-94",
          "grid-xl-8": "MuiGrid-grid-xl-8-95",
          "grid-xl-9": "MuiGrid-grid-xl-9-96",
          "grid-xl-auto": "MuiGrid-grid-xl-auto-86",
          "grid-xl-true": "MuiGrid-grid-xl-true-87",
          "grid-xs-1": "MuiGrid-grid-xs-1-32",
          "grid-xs-10": "MuiGrid-grid-xs-10-41",
          "grid-xs-11": "MuiGrid-grid-xs-11-42",
          "grid-xs-12": "MuiGrid-grid-xs-12-43",
          "grid-xs-2": "MuiGrid-grid-xs-2-33",
          "grid-xs-3": "MuiGrid-grid-xs-3-34",
          "grid-xs-4": "MuiGrid-grid-xs-4-35",
          "grid-xs-5": "MuiGrid-grid-xs-5-36",
          "grid-xs-6": "MuiGrid-grid-xs-6-37",
          "grid-xs-7": "MuiGrid-grid-xs-7-38",
          "grid-xs-8": "MuiGrid-grid-xs-8-39",
          "grid-xs-9": "MuiGrid-grid-xs-9-40",
          "grid-xs-auto": "MuiGrid-grid-xs-auto-30",
          "grid-xs-true": "MuiGrid-grid-xs-true-31",
          "item": "MuiGrid-item-4",
          "justify-xs-center": "MuiGrid-justify-xs-center-20",
          "justify-xs-flex-end": "MuiGrid-justify-xs-flex-end-21",
          "justify-xs-space-around": "MuiGrid-justify-xs-space-around-23",
          "justify-xs-space-between": "MuiGrid-justify-xs-space-between-22",
          "justify-xs-space-evenly": "MuiGrid-justify-xs-space-evenly-24",
          "spacing-xs-16": "MuiGrid-spacing-xs-16-26",
          "spacing-xs-24": "MuiGrid-spacing-xs-24-27",
          "spacing-xs-32": "MuiGrid-spacing-xs-32-28",
          "spacing-xs-40": "MuiGrid-spacing-xs-40-29",
          "spacing-xs-8": "MuiGrid-spacing-xs-8-25",
          "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap-9",
          "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse-10",
          "zeroMinWidth": "MuiGrid-zeroMinWidth-5",
        }
      }
      component="div"
      container={true}
      direction="row"
      item={true}
      justify="center"
      lg={false}
      md={false}
      sm={false}
      spacing={0}
      wrap="wrap"
      xl={false}
      xs={false}
      zeroMinWidth={false}
    >
      <div
        align="center"
        className="MuiGrid-container-3 MuiGrid-item-4 MuiGrid-justify-xs-center-20"
      >
        <SocialIcon
          className={Object {}}
          color="white"
          fontSize="24px"
          url="https://www.facebook.com/durgaprasad.budhwani"
        >
          <a
            aria-label="facebook"
            className="social-icon"
            fontSize="24px"
            href="https://www.facebook.com/durgaprasad.budhwani"
            rel="noopener"
            style={
              Object {
                "display": "inline-block",
                "height": "50px",
                "overflow": "hidden",
                "position": "relative",
                "verticalAlign": "middle",
                "width": "50px",
              }
            }
            target="_blank"
          >
            <div
              className="social-container"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <svg
                className="social-svg"
                style={
                  Object {
                    "borderRadius": "50%",
                    "fillRule": "evenodd",
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
                viewBox="0 0 64 64"
              >
                <Background>
                  <g
                    className="social-svg-background"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <circle
                      cx="32"
                      cy="32"
                      r="31"
                    />
                  </g>
                </Background>
                <Icon
                  networkKey="facebook"
                >
                  <g
                    className="social-svg-icon"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
                    />
                  </g>
                </Icon>
                <Mask
                  color="white"
                  networkKey="facebook"
                >
                  <g
                    className="social-svg-mask"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "white",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M0,0v64h64V0H0z M39.6,22l-2.8,0c-2.2,0-2.6,1.1-2.6,2.6V28h5.3l-0.7,5.3h-4.6V47h-5.5V33.3H24V28h4.6V24 c0-4.6,2.8-7,6.9-7c2,0,3.6,0.1,4.1,0.2V22z"
                    />
                  </g>
                </Mask>
              </svg>
            </div>
          </a>
        </SocialIcon>
        <SocialIcon
          className={Object {}}
          color="white"
          fontSize="24px"
          url="https://twitter.com/DurgaprasadDP"
        >
          <a
            aria-label="twitter"
            className="social-icon"
            fontSize="24px"
            href="https://twitter.com/DurgaprasadDP"
            rel="noopener"
            style={
              Object {
                "display": "inline-block",
                "height": "50px",
                "overflow": "hidden",
                "position": "relative",
                "verticalAlign": "middle",
                "width": "50px",
              }
            }
            target="_blank"
          >
            <div
              className="social-container"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <svg
                className="social-svg"
                style={
                  Object {
                    "borderRadius": "50%",
                    "fillRule": "evenodd",
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
                viewBox="0 0 64 64"
              >
                <Background>
                  <g
                    className="social-svg-background"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <circle
                      cx="32"
                      cy="32"
                      r="31"
                    />
                  </g>
                </Background>
                <Icon
                  networkKey="twitter"
                >
                  <g
                    className="social-svg-icon"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                    />
                  </g>
                </Icon>
                <Mask
                  color="white"
                  networkKey="twitter"
                >
                  <g
                    className="social-svg-mask"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "white",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
                    />
                  </g>
                </Mask>
              </svg>
            </div>
          </a>
        </SocialIcon>
        <SocialIcon
          className={Object {}}
          color="white"
          fontSize="24px"
          url="https://www.linkedin.com/in/durgaprasad-budhwani"
        >
          <a
            aria-label="linkedin"
            className="social-icon"
            fontSize="24px"
            href="https://www.linkedin.com/in/durgaprasad-budhwani"
            rel="noopener"
            style={
              Object {
                "display": "inline-block",
                "height": "50px",
                "overflow": "hidden",
                "position": "relative",
                "verticalAlign": "middle",
                "width": "50px",
              }
            }
            target="_blank"
          >
            <div
              className="social-container"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <svg
                className="social-svg"
                style={
                  Object {
                    "borderRadius": "50%",
                    "fillRule": "evenodd",
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
                viewBox="0 0 64 64"
              >
                <Background>
                  <g
                    className="social-svg-background"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <circle
                      cx="32"
                      cy="32"
                      r="31"
                    />
                  </g>
                </Background>
                <Icon
                  networkKey="linkedin"
                >
                  <g
                    className="social-svg-icon"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                    />
                  </g>
                </Icon>
                <Mask
                  color="white"
                  networkKey="linkedin"
                >
                  <g
                    className="social-svg-mask"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "white",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
                    />
                  </g>
                </Mask>
              </svg>
            </div>
          </a>
        </SocialIcon>
        <SocialIcon
          className={Object {}}
          color="white"
          fontSize="24px"
          url="https://plus.google.com/+DurgaprasadBudhwani"
        >
          <a
            aria-label="google"
            className="social-icon"
            fontSize="24px"
            href="https://plus.google.com/+DurgaprasadBudhwani"
            rel="noopener"
            style={
              Object {
                "display": "inline-block",
                "height": "50px",
                "overflow": "hidden",
                "position": "relative",
                "verticalAlign": "middle",
                "width": "50px",
              }
            }
            target="_blank"
          >
            <div
              className="social-container"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <svg
                className="social-svg"
                style={
                  Object {
                    "borderRadius": "50%",
                    "fillRule": "evenodd",
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
                viewBox="0 0 64 64"
              >
                <Background>
                  <g
                    className="social-svg-background"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <circle
                      cx="32"
                      cy="32"
                      r="31"
                    />
                  </g>
                </Background>
                <Icon
                  networkKey="google"
                >
                  <g
                    className="social-svg-icon"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M35.4,17h-8c-1.1,0-2.2,0.1-3.4,0.4 c-1.2,0.3-2.4,0.9-3.5,1.8c-1.7,1.6-2.5,3.4-2.5,5.4c0,1.6,0.6,3.1,1.8,4.3c1.1,1.3,2.7,2,4.9,2c0.4,0,0.8,0,1.3-0.1 c-0.1,0.2-0.2,0.4-0.2,0.7c-0.1,0.2-0.2,0.5-0.2,0.9c0,0.6,0.1,1.1,0.4,1.5c0.2,0.4,0.5,0.8,0.8,1.2c-0.9,0-2.1,0.1-3.5,0.4 c-1.4,0.2-2.8,0.7-4.1,1.5c-1.2,0.7-1.9,1.5-2.4,2.4c-0.5,0.9-0.7,1.7-0.7,2.5c0,1.5,0.7,2.8,2.1,3.9c1.4,1.2,3.5,1.8,6.3,1.8 c3.3-0.1,5.9-0.9,7.7-2.4c1.7-1.5,2.6-3.2,2.6-5.2c0-1.4-0.3-2.5-0.9-3.3c-0.6-0.8-1.4-1.6-2.2-2.3l-1.4-1.1 c-0.2-0.2-0.4-0.4-0.6-0.7c-0.2-0.3-0.4-0.6-0.4-1c0-0.4,0.1-0.8,0.4-1.1c0.2-0.3,0.4-0.6,0.7-0.8c0.4-0.4,0.8-0.7,1.2-1.1 c0.3-0.4,0.6-0.7,0.9-1.2c0.6-0.9,0.9-2,0.9-3.4c0-0.8-0.1-1.5-0.3-2.1c-0.2-0.6-0.5-1.1-0.7-1.5c-0.3-0.5-0.6-0.8-0.9-1.2 c-0.3-0.3-0.6-0.5-0.8-0.7H33L35.4,17z M31,38.9c0.7,0.8,1,1.6,1,2.7c0,1.3-0.5,2.3-1.5,3.1c-1,0.8-2.4,1.2-4.3,1.3 c-2.1,0-3.8-0.5-5-1.4c-1.3-0.9-1.9-2.1-1.9-3.5c0-0.7,0.1-1.3,0.4-1.8c0.3-0.5,0.6-0.9,0.9-1.2c0.4-0.3,0.8-0.6,1.1-0.7 c0.4-0.2,0.7-0.3,0.9-0.4c0.9-0.3,1.7-0.5,2.5-0.6c0.8-0.1,1.4-0.1,1.6-0.1c0.3,0,0.6,0,0.9,0C29.2,37.3,30.3,38.2,31,38.9z  M29.7,27.1c-0.1,0.5-0.3,1.1-0.7,1.6c-0.7,0.7-1.6,1.1-2.6,1.1c-0.8,0-1.6-0.3-2.2-0.8c-0.6-0.5-1.2-1.1-1.6-1.9 c-0.8-1.6-1.3-3.1-1.3-4.5c0-1.1,0.3-2.1,0.9-3c0.7-0.9,1.6-1.3,2.7-1.3c0.8,0,1.5,0.3,2.2,0.7c0.6,0.5,1.1,1.1,1.5,1.9 c0.8,1.6,1.2,3.2,1.2,4.8C29.8,26.1,29.8,26.5,29.7,27.1z M43.7,29.5v-4.3h-2.5v4.3H37V32h4.2v4.2h2.5V32H48v-2.5H43.7z"
                    />
                  </g>
                </Icon>
                <Mask
                  color="white"
                  networkKey="google"
                >
                  <g
                    className="social-svg-mask"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "white",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M0,0v64h64V0H0z M31.3,19.1c0.3,0.3,0.6,0.7,0.9,1.2c0.3,0.4,0.5,0.9,0.7,1.5c0.2,0.6,0.3,1.3,0.3,2.1 c0,1.4-0.3,2.6-0.9,3.4c-0.3,0.4-0.6,0.8-0.9,1.2c-0.4,0.4-0.8,0.7-1.2,1.1c-0.2,0.2-0.5,0.5-0.7,0.8c-0.2,0.3-0.4,0.7-0.4,1.1 c0,0.4,0.1,0.8,0.4,1c0.2,0.3,0.4,0.5,0.6,0.7l1.4,1.1c0.8,0.7,1.6,1.5,2.2,2.3c0.6,0.8,0.9,2,0.9,3.3c0,1.9-0.9,3.7-2.6,5.2 c-1.8,1.6-4.3,2.4-7.7,2.4c-2.8,0-4.9-0.6-6.3-1.8c-1.4-1.1-2.1-2.4-2.1-3.9c0-0.7,0.2-1.6,0.7-2.5c0.4-0.9,1.2-1.7,2.4-2.4 c1.3-0.7,2.7-1.2,4.1-1.5c1.4-0.2,2.6-0.3,3.5-0.4c-0.3-0.4-0.5-0.8-0.8-1.2c-0.3-0.4-0.4-0.9-0.4-1.5c0-0.4,0-0.6,0.2-0.9 c0.1-0.2,0.2-0.5,0.2-0.7c-0.5,0.1-0.9,0.1-1.3,0.1c-2.1,0-3.8-0.7-4.9-2c-1.2-1.2-1.8-2.7-1.8-4.3c0-2,0.8-3.8,2.5-5.4 c1.1-0.9,2.3-1.6,3.5-1.8c1.2-0.2,2.3-0.4,3.4-0.4h8L33,18.4h-2.5C30.7,18.6,31,18.8,31.3,19.1z M48,32h-4.3v4.2h-2.5V32H37v-2.5 h4.2v-4.3h2.5v4.3H48V32z M27.1,19.1c-0.6-0.5-1.4-0.7-2.2-0.7c-1.1,0-2,0.5-2.7,1.3c-0.6,0.9-0.9,1.9-0.9,3c0,1.5,0.4,3,1.3,4.5 c0.4,0.7,0.9,1.4,1.6,1.9c0.6,0.5,1.4,0.8,2.2,0.8c1.1,0,1.9-0.4,2.6-1.1c0.3-0.5,0.6-1,0.7-1.6c0.1-0.5,0.1-1,0.1-1.4 c0-1.6-0.4-3.2-1.2-4.8C28.2,20.2,27.7,19.5,27.1,19.1z M26.9,36.2c-0.2,0-0.7,0-1.6,0.1c-0.8,0.1-1.7,0.3-2.5,0.6 c-0.2,0.1-0.5,0.2-0.9,0.4c-0.4,0.2-0.7,0.4-1.1,0.7c-0.4,0.3-0.7,0.7-0.9,1.2c-0.3,0.5-0.4,1.1-0.4,1.8c0,1.4,0.6,2.6,1.9,3.5 c1.2,0.9,2.9,1.4,5,1.4c1.9,0,3.3-0.4,4.3-1.3c1-0.8,1.5-1.8,1.5-3.1c0-1-0.3-1.9-1-2.7c-0.7-0.7-1.8-1.6-3.3-2.6 C27.5,36.2,27.2,36.2,26.9,36.2z"
                    />
                  </g>
                </Mask>
              </svg>
            </div>
          </a>
        </SocialIcon>
        <SocialIcon
          className={Object {}}
          color="white"
          fontSize="24px"
          url="https://github.com/Durgaprasad-Budhwani"
        >
          <a
            aria-label="github"
            className="social-icon"
            fontSize="24px"
            href="https://github.com/Durgaprasad-Budhwani"
            rel="noopener"
            style={
              Object {
                "display": "inline-block",
                "height": "50px",
                "overflow": "hidden",
                "position": "relative",
                "verticalAlign": "middle",
                "width": "50px",
              }
            }
            target="_blank"
          >
            <div
              className="social-container"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <svg
                className="social-svg"
                style={
                  Object {
                    "borderRadius": "50%",
                    "fillRule": "evenodd",
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
                viewBox="0 0 64 64"
              >
                <Background>
                  <g
                    className="social-svg-background"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <circle
                      cx="32"
                      cy="32"
                      r="31"
                    />
                  </g>
                </Background>
                <Icon
                  networkKey="github"
                >
                  <g
                    className="social-svg-icon"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "transparent",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
                    />
                  </g>
                </Icon>
                <Mask
                  color="white"
                  networkKey="github"
                >
                  <g
                    className="social-svg-mask"
                    style={
                      Object {
                        "MozTransition": "fill 170ms ease-in-out",
                        "OTransition": "fill 170ms ease-in-out",
                        "WebkitTransition": "fill 170ms ease-in-out",
                        "fill": "white",
                        "msTransition": "fill 170ms ease-in-out",
                        "transition": "fill 170ms ease-in-out",
                      }
                    }
                  >
                    <path
                      d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
                    />
                  </g>
                </Mask>
              </svg>
            </div>
          </a>
        </SocialIcon>
      </div>
    </Grid>
  </WithStyles(Grid)>
</SocialIcons>
`;

exports[`<SocialIcons /> renders <SocialIcons /> 1`] = `
<div
  align="center"
  className="MuiGrid-container-3 MuiGrid-item-4 MuiGrid-justify-xs-center-20"
>
  <a
    aria-label="facebook"
    className="social-icon"
    fontSize="24px"
    href="https://www.facebook.com/durgaprasad.budhwani"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M39.6,22l-2.8,0c-2.2,0-2.6,1.1-2.6,2.6V28h5.3l-0.7,5.3h-4.6V47h-5.5V33.3H24V28h4.6V24 c0-4.6,2.8-7,6.9-7c2,0,3.6,0.1,4.1,0.2V22z"
          />
        </g>
      </svg>
    </div>
  </a>
  <a
    aria-label="twitter"
    className="social-icon"
    fontSize="24px"
    href="https://twitter.com/DurgaprasadDP"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
          />
        </g>
      </svg>
    </div>
  </a>
  <a
    aria-label="linkedin"
    className="social-icon"
    fontSize="24px"
    href="https://www.linkedin.com/in/durgaprasad-budhwani"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
          />
        </g>
      </svg>
    </div>
  </a>
  <a
    aria-label="google"
    className="social-icon"
    fontSize="24px"
    href="https://plus.google.com/+DurgaprasadBudhwani"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M35.4,17h-8c-1.1,0-2.2,0.1-3.4,0.4 c-1.2,0.3-2.4,0.9-3.5,1.8c-1.7,1.6-2.5,3.4-2.5,5.4c0,1.6,0.6,3.1,1.8,4.3c1.1,1.3,2.7,2,4.9,2c0.4,0,0.8,0,1.3-0.1 c-0.1,0.2-0.2,0.4-0.2,0.7c-0.1,0.2-0.2,0.5-0.2,0.9c0,0.6,0.1,1.1,0.4,1.5c0.2,0.4,0.5,0.8,0.8,1.2c-0.9,0-2.1,0.1-3.5,0.4 c-1.4,0.2-2.8,0.7-4.1,1.5c-1.2,0.7-1.9,1.5-2.4,2.4c-0.5,0.9-0.7,1.7-0.7,2.5c0,1.5,0.7,2.8,2.1,3.9c1.4,1.2,3.5,1.8,6.3,1.8 c3.3-0.1,5.9-0.9,7.7-2.4c1.7-1.5,2.6-3.2,2.6-5.2c0-1.4-0.3-2.5-0.9-3.3c-0.6-0.8-1.4-1.6-2.2-2.3l-1.4-1.1 c-0.2-0.2-0.4-0.4-0.6-0.7c-0.2-0.3-0.4-0.6-0.4-1c0-0.4,0.1-0.8,0.4-1.1c0.2-0.3,0.4-0.6,0.7-0.8c0.4-0.4,0.8-0.7,1.2-1.1 c0.3-0.4,0.6-0.7,0.9-1.2c0.6-0.9,0.9-2,0.9-3.4c0-0.8-0.1-1.5-0.3-2.1c-0.2-0.6-0.5-1.1-0.7-1.5c-0.3-0.5-0.6-0.8-0.9-1.2 c-0.3-0.3-0.6-0.5-0.8-0.7H33L35.4,17z M31,38.9c0.7,0.8,1,1.6,1,2.7c0,1.3-0.5,2.3-1.5,3.1c-1,0.8-2.4,1.2-4.3,1.3 c-2.1,0-3.8-0.5-5-1.4c-1.3-0.9-1.9-2.1-1.9-3.5c0-0.7,0.1-1.3,0.4-1.8c0.3-0.5,0.6-0.9,0.9-1.2c0.4-0.3,0.8-0.6,1.1-0.7 c0.4-0.2,0.7-0.3,0.9-0.4c0.9-0.3,1.7-0.5,2.5-0.6c0.8-0.1,1.4-0.1,1.6-0.1c0.3,0,0.6,0,0.9,0C29.2,37.3,30.3,38.2,31,38.9z  M29.7,27.1c-0.1,0.5-0.3,1.1-0.7,1.6c-0.7,0.7-1.6,1.1-2.6,1.1c-0.8,0-1.6-0.3-2.2-0.8c-0.6-0.5-1.2-1.1-1.6-1.9 c-0.8-1.6-1.3-3.1-1.3-4.5c0-1.1,0.3-2.1,0.9-3c0.7-0.9,1.6-1.3,2.7-1.3c0.8,0,1.5,0.3,2.2,0.7c0.6,0.5,1.1,1.1,1.5,1.9 c0.8,1.6,1.2,3.2,1.2,4.8C29.8,26.1,29.8,26.5,29.7,27.1z M43.7,29.5v-4.3h-2.5v4.3H37V32h4.2v4.2h2.5V32H48v-2.5H43.7z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M31.3,19.1c0.3,0.3,0.6,0.7,0.9,1.2c0.3,0.4,0.5,0.9,0.7,1.5c0.2,0.6,0.3,1.3,0.3,2.1 c0,1.4-0.3,2.6-0.9,3.4c-0.3,0.4-0.6,0.8-0.9,1.2c-0.4,0.4-0.8,0.7-1.2,1.1c-0.2,0.2-0.5,0.5-0.7,0.8c-0.2,0.3-0.4,0.7-0.4,1.1 c0,0.4,0.1,0.8,0.4,1c0.2,0.3,0.4,0.5,0.6,0.7l1.4,1.1c0.8,0.7,1.6,1.5,2.2,2.3c0.6,0.8,0.9,2,0.9,3.3c0,1.9-0.9,3.7-2.6,5.2 c-1.8,1.6-4.3,2.4-7.7,2.4c-2.8,0-4.9-0.6-6.3-1.8c-1.4-1.1-2.1-2.4-2.1-3.9c0-0.7,0.2-1.6,0.7-2.5c0.4-0.9,1.2-1.7,2.4-2.4 c1.3-0.7,2.7-1.2,4.1-1.5c1.4-0.2,2.6-0.3,3.5-0.4c-0.3-0.4-0.5-0.8-0.8-1.2c-0.3-0.4-0.4-0.9-0.4-1.5c0-0.4,0-0.6,0.2-0.9 c0.1-0.2,0.2-0.5,0.2-0.7c-0.5,0.1-0.9,0.1-1.3,0.1c-2.1,0-3.8-0.7-4.9-2c-1.2-1.2-1.8-2.7-1.8-4.3c0-2,0.8-3.8,2.5-5.4 c1.1-0.9,2.3-1.6,3.5-1.8c1.2-0.2,2.3-0.4,3.4-0.4h8L33,18.4h-2.5C30.7,18.6,31,18.8,31.3,19.1z M48,32h-4.3v4.2h-2.5V32H37v-2.5 h4.2v-4.3h2.5v4.3H48V32z M27.1,19.1c-0.6-0.5-1.4-0.7-2.2-0.7c-1.1,0-2,0.5-2.7,1.3c-0.6,0.9-0.9,1.9-0.9,3c0,1.5,0.4,3,1.3,4.5 c0.4,0.7,0.9,1.4,1.6,1.9c0.6,0.5,1.4,0.8,2.2,0.8c1.1,0,1.9-0.4,2.6-1.1c0.3-0.5,0.6-1,0.7-1.6c0.1-0.5,0.1-1,0.1-1.4 c0-1.6-0.4-3.2-1.2-4.8C28.2,20.2,27.7,19.5,27.1,19.1z M26.9,36.2c-0.2,0-0.7,0-1.6,0.1c-0.8,0.1-1.7,0.3-2.5,0.6 c-0.2,0.1-0.5,0.2-0.9,0.4c-0.4,0.2-0.7,0.4-1.1,0.7c-0.4,0.3-0.7,0.7-0.9,1.2c-0.3,0.5-0.4,1.1-0.4,1.8c0,1.4,0.6,2.6,1.9,3.5 c1.2,0.9,2.9,1.4,5,1.4c1.9,0,3.3-0.4,4.3-1.3c1-0.8,1.5-1.8,1.5-3.1c0-1-0.3-1.9-1-2.7c-0.7-0.7-1.8-1.6-3.3-2.6 C27.5,36.2,27.2,36.2,26.9,36.2z"
          />
        </g>
      </svg>
    </div>
  </a>
  <a
    aria-label="github"
    className="social-icon"
    fontSize="24px"
    href="https://github.com/Durgaprasad-Budhwani"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
          />
        </g>
      </svg>
    </div>
  </a>
</div>
`;

exports[`<SocialIcons /> renders <SocialIconsContainer /> 1`] = `
<div
  align="center"
  className="MuiGrid-container-3 MuiGrid-item-4 MuiGrid-justify-xs-center-20 SocialIcons-container-2 [object Object]"
>
  <a
    aria-label="facebook"
    className="social-icon SocialIcons-button-1 [object Object]"
    fontSize="24px"
    href="https://www.facebook.com/durgaprasad.budhwani"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M39.6,22l-2.8,0c-2.2,0-2.6,1.1-2.6,2.6V28h5.3l-0.7,5.3h-4.6V47h-5.5V33.3H24V28h4.6V24 c0-4.6,2.8-7,6.9-7c2,0,3.6,0.1,4.1,0.2V22z"
          />
        </g>
      </svg>
    </div>
  </a>
  <a
    aria-label="twitter"
    className="social-icon SocialIcons-button-1 [object Object]"
    fontSize="24px"
    href="https://twitter.com/DurgaprasadDP"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
          />
        </g>
      </svg>
    </div>
  </a>
  <a
    aria-label="linkedin"
    className="social-icon SocialIcons-button-1 [object Object]"
    fontSize="24px"
    href="https://www.linkedin.com/in/durgaprasad-budhwani"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
          />
        </g>
      </svg>
    </div>
  </a>
  <a
    aria-label="google"
    className="social-icon SocialIcons-button-1 [object Object]"
    fontSize="24px"
    href="https://plus.google.com/+DurgaprasadBudhwani"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M35.4,17h-8c-1.1,0-2.2,0.1-3.4,0.4 c-1.2,0.3-2.4,0.9-3.5,1.8c-1.7,1.6-2.5,3.4-2.5,5.4c0,1.6,0.6,3.1,1.8,4.3c1.1,1.3,2.7,2,4.9,2c0.4,0,0.8,0,1.3-0.1 c-0.1,0.2-0.2,0.4-0.2,0.7c-0.1,0.2-0.2,0.5-0.2,0.9c0,0.6,0.1,1.1,0.4,1.5c0.2,0.4,0.5,0.8,0.8,1.2c-0.9,0-2.1,0.1-3.5,0.4 c-1.4,0.2-2.8,0.7-4.1,1.5c-1.2,0.7-1.9,1.5-2.4,2.4c-0.5,0.9-0.7,1.7-0.7,2.5c0,1.5,0.7,2.8,2.1,3.9c1.4,1.2,3.5,1.8,6.3,1.8 c3.3-0.1,5.9-0.9,7.7-2.4c1.7-1.5,2.6-3.2,2.6-5.2c0-1.4-0.3-2.5-0.9-3.3c-0.6-0.8-1.4-1.6-2.2-2.3l-1.4-1.1 c-0.2-0.2-0.4-0.4-0.6-0.7c-0.2-0.3-0.4-0.6-0.4-1c0-0.4,0.1-0.8,0.4-1.1c0.2-0.3,0.4-0.6,0.7-0.8c0.4-0.4,0.8-0.7,1.2-1.1 c0.3-0.4,0.6-0.7,0.9-1.2c0.6-0.9,0.9-2,0.9-3.4c0-0.8-0.1-1.5-0.3-2.1c-0.2-0.6-0.5-1.1-0.7-1.5c-0.3-0.5-0.6-0.8-0.9-1.2 c-0.3-0.3-0.6-0.5-0.8-0.7H33L35.4,17z M31,38.9c0.7,0.8,1,1.6,1,2.7c0,1.3-0.5,2.3-1.5,3.1c-1,0.8-2.4,1.2-4.3,1.3 c-2.1,0-3.8-0.5-5-1.4c-1.3-0.9-1.9-2.1-1.9-3.5c0-0.7,0.1-1.3,0.4-1.8c0.3-0.5,0.6-0.9,0.9-1.2c0.4-0.3,0.8-0.6,1.1-0.7 c0.4-0.2,0.7-0.3,0.9-0.4c0.9-0.3,1.7-0.5,2.5-0.6c0.8-0.1,1.4-0.1,1.6-0.1c0.3,0,0.6,0,0.9,0C29.2,37.3,30.3,38.2,31,38.9z  M29.7,27.1c-0.1,0.5-0.3,1.1-0.7,1.6c-0.7,0.7-1.6,1.1-2.6,1.1c-0.8,0-1.6-0.3-2.2-0.8c-0.6-0.5-1.2-1.1-1.6-1.9 c-0.8-1.6-1.3-3.1-1.3-4.5c0-1.1,0.3-2.1,0.9-3c0.7-0.9,1.6-1.3,2.7-1.3c0.8,0,1.5,0.3,2.2,0.7c0.6,0.5,1.1,1.1,1.5,1.9 c0.8,1.6,1.2,3.2,1.2,4.8C29.8,26.1,29.8,26.5,29.7,27.1z M43.7,29.5v-4.3h-2.5v4.3H37V32h4.2v4.2h2.5V32H48v-2.5H43.7z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M31.3,19.1c0.3,0.3,0.6,0.7,0.9,1.2c0.3,0.4,0.5,0.9,0.7,1.5c0.2,0.6,0.3,1.3,0.3,2.1 c0,1.4-0.3,2.6-0.9,3.4c-0.3,0.4-0.6,0.8-0.9,1.2c-0.4,0.4-0.8,0.7-1.2,1.1c-0.2,0.2-0.5,0.5-0.7,0.8c-0.2,0.3-0.4,0.7-0.4,1.1 c0,0.4,0.1,0.8,0.4,1c0.2,0.3,0.4,0.5,0.6,0.7l1.4,1.1c0.8,0.7,1.6,1.5,2.2,2.3c0.6,0.8,0.9,2,0.9,3.3c0,1.9-0.9,3.7-2.6,5.2 c-1.8,1.6-4.3,2.4-7.7,2.4c-2.8,0-4.9-0.6-6.3-1.8c-1.4-1.1-2.1-2.4-2.1-3.9c0-0.7,0.2-1.6,0.7-2.5c0.4-0.9,1.2-1.7,2.4-2.4 c1.3-0.7,2.7-1.2,4.1-1.5c1.4-0.2,2.6-0.3,3.5-0.4c-0.3-0.4-0.5-0.8-0.8-1.2c-0.3-0.4-0.4-0.9-0.4-1.5c0-0.4,0-0.6,0.2-0.9 c0.1-0.2,0.2-0.5,0.2-0.7c-0.5,0.1-0.9,0.1-1.3,0.1c-2.1,0-3.8-0.7-4.9-2c-1.2-1.2-1.8-2.7-1.8-4.3c0-2,0.8-3.8,2.5-5.4 c1.1-0.9,2.3-1.6,3.5-1.8c1.2-0.2,2.3-0.4,3.4-0.4h8L33,18.4h-2.5C30.7,18.6,31,18.8,31.3,19.1z M48,32h-4.3v4.2h-2.5V32H37v-2.5 h4.2v-4.3h2.5v4.3H48V32z M27.1,19.1c-0.6-0.5-1.4-0.7-2.2-0.7c-1.1,0-2,0.5-2.7,1.3c-0.6,0.9-0.9,1.9-0.9,3c0,1.5,0.4,3,1.3,4.5 c0.4,0.7,0.9,1.4,1.6,1.9c0.6,0.5,1.4,0.8,2.2,0.8c1.1,0,1.9-0.4,2.6-1.1c0.3-0.5,0.6-1,0.7-1.6c0.1-0.5,0.1-1,0.1-1.4 c0-1.6-0.4-3.2-1.2-4.8C28.2,20.2,27.7,19.5,27.1,19.1z M26.9,36.2c-0.2,0-0.7,0-1.6,0.1c-0.8,0.1-1.7,0.3-2.5,0.6 c-0.2,0.1-0.5,0.2-0.9,0.4c-0.4,0.2-0.7,0.4-1.1,0.7c-0.4,0.3-0.7,0.7-0.9,1.2c-0.3,0.5-0.4,1.1-0.4,1.8c0,1.4,0.6,2.6,1.9,3.5 c1.2,0.9,2.9,1.4,5,1.4c1.9,0,3.3-0.4,4.3-1.3c1-0.8,1.5-1.8,1.5-3.1c0-1-0.3-1.9-1-2.7c-0.7-0.7-1.8-1.6-3.3-2.6 C27.5,36.2,27.2,36.2,26.9,36.2z"
          />
        </g>
      </svg>
    </div>
  </a>
  <a
    aria-label="github"
    className="social-icon SocialIcons-button-1 [object Object]"
    fontSize="24px"
    href="https://github.com/Durgaprasad-Budhwani"
    rel="noopener"
    style={
      Object {
        "display": "inline-block",
        "height": "50px",
        "overflow": "hidden",
        "position": "relative",
        "verticalAlign": "middle",
        "width": "50px",
      }
    }
    target="_blank"
  >
    <div
      className="social-container"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <svg
        className="social-svg"
        style={
          Object {
            "borderRadius": "50%",
            "fillRule": "evenodd",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        viewBox="0 0 64 64"
      >
        <g
          className="social-svg-background"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <circle
            cx="32"
            cy="32"
            r="31"
          />
        </g>
        <g
          className="social-svg-icon"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "transparent",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
          />
        </g>
        <g
          className="social-svg-mask"
          style={
            Object {
              "MozTransition": "fill 170ms ease-in-out",
              "OTransition": "fill 170ms ease-in-out",
              "WebkitTransition": "fill 170ms ease-in-out",
              "fill": "white",
              "msTransition": "fill 170ms ease-in-out",
              "transition": "fill 170ms ease-in-out",
            }
          }
        >
          <path
            d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
          />
        </g>
      </svg>
    </div>
  </a>
</div>
`;
